--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html> 
 <html> 
 <head>
-<title>Yeyyyyyy my first HTML</title> 
+<title>t HTML</title> 
 </head>
 <body>
-<h1>HTML complicated!</h1>
+<h1>HTML!</h1>
 <h2>Library</h2>
 <h1></h1> 
 <img src="https://target.scene7.com/is/image/Target/GUEST_4ad43137-891c-4497-b6a8-fb65825a46a9?wid=1000&hei=1000&fit=constrain&qlt=80&fmt=pjpeg">
