about me updated

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@ display: none;
 <div id="about-me" class="section level2">
 <h2>About me!</h2>
 <ul>
-<li>Hobbies: Art, baking, painting</li>
+<li>Hobbies: Art, baking, painting, chess</li>
 <li>Interests: Cardiology, Biomedical, Math</li>
 <li>Inspiration: Family, teachers, friends</li>
 <li>Adores: Family, friends.</li>
