--- a/index.html
+++ b/index.html
@@ -365,6 +365,31 @@ display: none;
 <li>Inspiration: Family, teachers, friends</li>
 <li>Adores: Family, friends.</li>
 </ul>
+<ol style="list-style-type: decimal">
+<li>Checklist 1</li>
+<li>Checklist 2</li>
+<li>Checklist 3</li>
+</ol>
+<p><strong>Here you go</strong></p>
+<p><em>Hello everyone</em></p>
+<p>A sample table:</p>
+<table>
+<thead>
+<tr class="header">
+<th>Column 1</th>
+<th>Column 2</th>
+<th>Column 3</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td>dada</td>
+<td>dada</td>
+<td>dada</td>
+</tr>
+</tbody>
+</table>
+<p>A YOUTUBE link with my favourite song –&gt; <a href="https://www.youtube.com/watch?v=b1kbLwvqugk">Click me</a></p>
 <p><img src="\Images\images-1.jpg" /></p>
 </div>
 
