--- a/index.html
+++ b/index.html
@@ -359,33 +359,28 @@ display: none;
 
 <div id="about-me" class="section level2">
 <h2>About me!</h2>
-<ul>
-<li>Hobbies: Art, baking, painting, chess</li>
-<li>Interests: Cardiology, Biomedical, Math</li>
-<li>Inspiration: Family, teachers, friends</li>
-<li>Adores: Family, friends.</li>
-</ul>
 <ol style="list-style-type: decimal">
-<li>Checklist 1</li>
-<li>Checklist 2</li>
-<li>Checklist 3</li>
+<li><strong>Hobbies</strong>: Art, baking, painting, chess</li>
+<li><strong>Interests</strong>: Cardiology, Biomedical, Math</li>
+<li><strong>Inspiration</strong>: Family, teachers, friends</li>
+<li><strong>Adores</strong>: Family, friends.</li>
 </ol>
-<p><strong>Here you go</strong></p>
-<p><em>Hello everyone</em></p>
-<p>A sample table:</p>
+<p>An experimental table with nothing:</p>
 <table>
 <thead>
 <tr class="header">
 <th>Column 1</th>
 <th>Column 2</th>
 <th>Column 3</th>
+<th>Column4</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td>dada</td>
-<td>dada</td>
-<td>dada</td>
+<td>data</td>
+<td>can</td>
+<td>be</td>
+<td>here</td>
 </tr>
 </tbody>
 </table>
