--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleleapis.com/css2?family=Roboto:wght@400;700&display=swap ">
     Lasya Vemprala
-    <h1>Harry Potter Book Summaries</h1>
+    <h1>Hello, Thank you for your interest in looking at my page!</h1>
 </head>
 <body>
     <div class="mytabs">
