--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="mytabs">
         <input type="radio" id="tabfree" name="mytabs" checked="checked">
-        <label for="tabfree">Book 1</label>
+        <label for="tabfree">About me!</label>
         <div class="tab">
         <h4>Sorceror's Stone</h4>
         <p class="test">Harry Potter is the most miserable, lonely boy you can imagine. He’s shunned by his relatives, the Dursleys, who have raised him since he was an infant. He’s forced to live in the cupboard under the stairs, forced to wear his cousin Dudley’s hand-me-down clothes, and forced to go to his neighbour’s house when the rest of the family is doing something fun. Yes, he’s just about as miserable as you can get.When Harry hears all this, he doesn’t know what to think. However, everything Hagrid tells him turns out to be true, and with a joyful heart Harry starts wizarding school in September. He quickly becomes best friends with a boy named Ron Weasley, and before they even make it to Christmas, they break tons of school rules when they attack a troll and prevent it from killing fellow student Hermione Granger. After the troll incident, the three become inseparable, and Harry is amazed to have found such great friends. He is constantly busy trying to stay on top of the mounds of homework, as well as participating in weekly Quidditch practices. Quidditch is a popular sport among wizards and Harry is the youngest Quidditch player in over a century. It's also a game Harry loves more than anything else at school.
@@ -24,7 +24,7 @@
         </div>
 
         <input type="radio" id="tabsilver" name="mytabs">
-        <label for="tabsilver">Book 2</label>
+        <label for="tabsilver">Weekly Math Test - Concepts</label>
         <div class="tab">
         <h4>Chamber of Secrets</h4>
         <p>It’s been another long summer at the Dursley’s for Harry Potter. He can’t wait to get back to Hogwarts and is counting down the days until he can return. He’s surprised when, on his birthday, a strange elfish creature named Dobby shows up with dire warnings for Harry: He must not return to Hogwarts!
