--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <div class="row">
             <div class="about-col-1">
-                <img src="Images/IMG_7440.JPG"
+                <img src="Images/IMG_7440.jpg"
                  width="500" 
                  height="500" />
             </div>
