--- a/test_scores.html
+++ b/test_scores.html
@@ -14,28 +14,88 @@
   <table id="child-pages-table">
     <tr> 
        <th></th>
-       <th>Column Header 1</th>
-       <th>Column Header 2</th>
-       <th>Column Header 3</th>
+       <th>Student Name</th>
+       <th>Position</th>
+       <th>Score</th>
      </tr>
      <tr>
-       <th>Row Header 1</th>
-       <td>Data</td>
-       <td>Data</td>
-       <td>Data</td>
+       <th>1</th>
+       <td>Hishitha</td>
+       <td>1</td>
+       <td></td>
      </tr>
      <tr> 
-       <th>Row Header 2</th>
-       <td>Data</td>
-       <td>Data</td>
-       <td>Data</td>
+       <th>2</th>
+       <td>Arhan</td>
+       <td>2</td>
+       <td></td>
     </tr>
     <tr> 
-       <th>Row Header 3</th>
-       <td>Data</td>
-       <td>Data</td>
-       <td>Data</td>
+       <th>3</th>
+       <td>Sai Sashrika</td>
+       <td>3</td>
+       <td></td>
     </tr>
+      <tr> 
+       <th>4</th>
+       <td>Gowtham Pabba</td>
+       <td>4</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>5</th>
+       <td>Dev</td>
+       <td>5</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>6</th>
+       <td>Pragnya</td>
+       <td></td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>7</th>
+       <td>Jasmitha</td>
+       <td>7</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>7</th>
+       <td>Mokshitha</td>
+       <td>7</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>7</th>
+       <td>Balaji</td>
+       <td>7</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>8</th>
+       <td>Gowtham Krishna</td>
+       <td>8</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>9</th>
+       <td>Sanvika</td>
+       <td>9</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>10</th>
+       <td>Deshika</td>
+       <td>10</td>
+       <td></td>
+    </tr>
+      <tr> 
+       <th>10</th>
+       <td>Ishaanvi</td>
+       <td>10</td>
+       <td></td>
+      </tr>
    </table>
 </body>
 </html>
